--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                             <img src="assets/images/logo.svg" alt="logo">
                             <p>Creative Community</p>
                         </div>
-                        <p>Более чем за 20 лет работы команда «Кто-то» выросла до мощного пула экспертов, насчитывающего 900+ специалистов,
-                            свыше 600 из которых – сертифицированные инженеры. «Кто-то» готова к осуществлению крупных комплексных проектов
+                        <p>Более чем за 20 лет работы команда «Creative Community» выросла до мощного пула экспертов, насчитывающего 900+ специалистов,
+                            свыше 600 из которых – сертифицированные инженеры. «Creative Community» готова к осуществлению крупных комплексных проектов
                             по построению информационных систем и обеспечению их интеграции с существующей IT-инфраструктурой.</p>
                     </div>
                     <div class="slide two">
